src/main/java/com/example/JallowBooks/errors/InternalServerErrorException.java
package com.example.JallowBooks.errors;

public class InternalServerErrorException extends RuntimeException{
    public InternalServerErrorException(String message){
        super(message);
    }
}
